# algorithms-guest-lecture

./: .gitignore  README.md  animations.py  default.nix  flake.nix  header.tex  lecture_notes.md  outline.tex  presentation.tex  pyproject.toml
animations/: animations.py
animations/test/: test_animations.py
