[project]
name = "algs-guest-lecture"
version = "1.0.0"
authors = [
    { name="Liam Murphy", email="liam.murphy137@gmail.com" },
]
description = "A simple animation for my algs guest lecture"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/liam-murphy14/algorithms-guest-lecture"
Issues = "https://github.com/liam-murphy14/algorithms-guest-lecture/issues"

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
animation = "animations:main"
